# $Id$

2008-01-07	Konstantin V. Arkhipov

	* main/Utils/ClassUtils.class.php: isClassImplements implemented, to
	avoid SPL's class_implements dependency.

2008-01-06	Konstantin V. Arkhipov

	* 1.0.0 released.

2007-12-29	Ivan Y. Khvostishkov

	* core/Form/Form.class.php: getInnerErrors() for PrimitiveForm.

2007-12-27	Vladimir A. Altuchov

	* main/Markup/Feed/: Category attribute added.

2007-12-25	Ivan Y. Khvostishkov

	* main/Net/HttpUrl.class.php: setHttpHost() - setter for Host-like
	values, as described in rfc2616, sec. 14.23.

2007-12-25	Konstantin V. Arkhipov

	* global.inc.php.tpl: ONPHP_TEMP_PATH now defaults to
	sys_get_temp_dir(), ONPHP_CLASS_CACHE now defaults to ONPHP_TEMP_PATH.

2007-12-23	Konstantin V. Arkhipov

	* main/DAOs/Handlers/CacheSegmentHandler.class.php: new experimental
	segment handler implemented.

	* core/Cache/: append() added in CachePeer and implemented in it's
	available childs.

2007-12-20	Dmitry E. Demidov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: added
	method viewExists.

2007-12-18	Dmitry E. Demidov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: added
	method addFirstPrefix.

2007-12-11	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveString.class.php: change
	mail pattern of local-part wrt RFC2822.

2007-12-11	Dmitry E. Pismenny

	* main/Base/RequestType.class.php: added server type.

2007-12-05	Anton E. Lebedevich

	* main/Crypto/, main/Math/, main/OpenId/: OpenId implementation
	propagated from 0.10.

2007-12-04	Ivan Y. Khvostishkov

	* main/Utils/DebugUtils.class.php: errorMav() added for debugging error
	views.

2007-11-27	Denis M. Gabaidulin

	* core/Form/Filters/CropFilter.class.php: crop string import filter
	were added.

2007-11-22	Konstantin V. Arkhipov

	* ext/src/core/Base/: Ternary implemented.

	* ext/src/core/OSQL/: OrderBy implemented.

2007-11-21	Konstantin V. Arkhipov

	* main/Utils/FullTextUtils.class.php: ObjectQuery replaced by
	Criteria.

2007-11-22	Dmitry E. Pismenny
